# DualWieldParryingNG-SKSEMenuFramework

./: CMakeLists.txt  CMakePresets.json
include/: SKSEMenuFramework.h  Settings.in.h  UI.h
src/: InputEventHandler.cpp  Settings.cpp  UI.cpp  XSEPlugin.cpp
